--- a/kesifci_veri_analizi_veri_gorsellestirme/1-buyuk_resmi_gormek.ipynb
+++ b/kesifci_veri_analizi_veri_gorsellestirme/1-buyuk_resmi_gormek.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9643e11",
+   "id": "0a0fb76d",
    "metadata": {},
    "source": [
     "#### Büyük Resmi Görmek ve Veriyi Temsil Etmek"
@@ -10,10 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0829b9b7",
+   "id": "3d504f69",
    "metadata": {},
    "source": [
-    "Veri b"
+    "Veri bilimcinin özgürce çalışabildiği, söz konusu olmayan yeni bulgulara ulaşabileceği, yeni iş fikirleri, yeni işe yarar sonuçlara ulaşabileceği, sorular sorarak, hipotezler kurarak ilerlediği süreçtir."
    ]
   }
  ],
