--- a/kesifci_veri_analizi_veri_gorsellestirme/13-boxplot.ipynb
+++ b/kesifci_veri_analizi_veri_gorsellestirme/13-boxplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a48d5da7",
+   "id": "5aa76913",
    "metadata": {},
    "source": [
     "### Boxplot "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d33e94",
+   "id": "8d76cbfd",
    "metadata": {},
    "source": [
     "#### Veri Seti Hikayesi"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff5cd6b",
+   "id": "adebeddc",
    "metadata": {},
    "source": [
     "* total_bill: yemeğin toplam fiyatı (bahşiş ve vergi dahil)\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "944f1ab6",
+   "id": "36617171",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f2299834",
+   "id": "e91308fd",
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c36f470f",
+   "execution_count": 4,
+   "id": "9938e98b",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "Name: sex, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,8 +258,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "1570b627",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No     151\n",
+       "Yes     93\n",
+       "Name: smoker, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"smoker\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d794c211",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sat     87\n",
+       "Sun     76\n",
+       "Thur    62\n",
+       "Fri     19\n",
+       "Name: day, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"day\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ed62005d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dinner    176\n",
+       "Lunch      68\n",
+       "Name: time, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"time\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b4d4320a",
+   "id": "3f6a5610",
    "metadata": {},
    "outputs": [],
    "source": []
