--- a/05-veri_bilimi_icin_istatistik/05-olasilik_dagilimlari.ipynb
+++ b/05-veri_bilimi_icin_istatistik/05-olasilik_dagilimlari.ipynb
@@ -268,7 +268,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a1dc06a4",
+   "id": "21e2dd93",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -281,7 +281,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "25739a80",
+   "id": "df1dc42e",
    "metadata": {},
    "source": [
     "![Screenshot_2.png](attachment:Screenshot_2.png)"
@@ -294,7 +294,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "fb61b207",
+   "id": "cd7465f7",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5048d6",
+   "id": "99e73470",
    "metadata": {},
    "source": [
     "#### İş Uygulaması: Reklam Harcaması Optimizasyonu"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fdb194",
+   "id": "c64a27a5",
    "metadata": {},
    "source": [
     "###### Problem : \n",
@@ -328,7 +328,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0002e5b2",
+   "id": "6db3930f",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "25cb246e",
+   "id": "94a1239c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "96a06597",
+   "id": "2c674793",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34a46a1",
+   "id": "c4739f58",
    "metadata": {},
    "source": [
     "#### Poisson Dağılımı"
@@ -384,7 +384,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "44bb5f37",
+   "id": "d9917a86",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -397,7 +397,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f93e23e5",
+   "id": "953c9785",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -410,7 +410,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a2b504cb",
+   "id": "1216e58c",
    "metadata": {},
    "source": [
     "![Screenshot_3.png](attachment:Screenshot_3.png)"
@@ -423,7 +423,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d10b6371",
+   "id": "cdcfe40e",
    "metadata": {},
    "source": [
     "![Screenshot_2.png](attachment:Screenshot_2.png)"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a117da2c",
+   "id": "96d6ab17",
    "metadata": {},
    "source": [
     "* 10 Bin kelimeden oluşan bir kitapta hatalı kelime sayısı\n",
@@ -456,7 +456,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cbd57702",
+   "id": "2661c519",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa4d8e40",
+   "id": "05f2f48f",
    "metadata": {},
    "source": [
     "#### İş Uygulaması: İlan Girişi Hata Olasılıklarının Hesaplanması"
@@ -477,7 +477,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2a399e50",
+   "id": "fd7d861f",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -490,7 +490,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f15dc0a1",
+   "id": "f5da4990",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0da7913a",
+   "id": "64743c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "60a7852b",
+   "id": "ddd53bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a8972401",
+   "id": "ddcf50b9",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbe7e6f",
+   "id": "7d3f8dab",
    "metadata": {},
    "source": [
     "#### Normal Dağılım"
@@ -554,7 +554,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1fb6d8c4",
+   "id": "accad8c8",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60eaf420",
+   "id": "53ef0b65",
    "metadata": {},
    "source": [
     "#### İş Uygulaması: Satış Olasılıklarının Hesaplanması"
@@ -575,7 +575,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "04eeb2f1",
+   "id": "94b1a943",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -588,7 +588,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "faeca8e0",
+   "id": "9f7fad80",
    "metadata": {},
    "source": [
     "![Screenshot_2.png](attachment:Screenshot_2.png)"
@@ -601,7 +601,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c4b7b300",
+   "id": "0108af0a",
    "metadata": {},
    "source": [
     "![Screenshot_1.png](attachment:Screenshot_1.png)"
@@ -614,7 +614,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6c4930be",
+   "id": "7abe847a",
    "metadata": {},
    "source": [
     "![Screenshot_2.png](attachment:Screenshot_2.png)"
@@ -627,7 +627,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ec7b7fea",
+   "id": "8c231b77",
    "metadata": {},
    "source": [
     "![Screenshot_3.png](attachment:Screenshot_3.png)"
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fa03330f",
+   "id": "4637738b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9e502525",
+   "id": "13168a67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7be850e4",
+   "id": "baa27717",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "be4ccf57",
+   "id": "9b68e23a",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8a83e498",
+   "id": "7a7df436",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "239795f3",
+   "id": "e33d5505",
    "metadata": {},
    "outputs": [
     {
@@ -741,6 +741,16 @@
    "source": [
     "# 85 ile 90 arasında olması\n",
     "norm.cdf(90, 80, 5) - norm.cdf(85, 80, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4688a613",
+   "metadata": {},
+   "source": [
+    "##### Çıkarmamız gereken sonuçlar:\n",
+    "* Belirsizlik altında karar vermeye çalışmak\n",
+    "* Uygun olasılık fonksiyonları ile olasılık hesapları yapmak"
    ]
   }
  ],
